# flask

./: .dockerignore  Dockerfile  MANIFEST.in  README.md  app.py  architect.yml  requirements.txt  setup.cfg
flaskr/: __init__.py
flaskr/templates/: base.html
src/: __init__.py  app.py  controller.py  models.py
src/static/: style.css
src/templates/: base.html  index.html  movies.html
src/templates/content/: next_steps.html
