[metadata]
name = flaskr
version = 2.1.1
url = https://github.com/architect-templates/flask
license = BSD-3-Clause
maintainer = Architect.io
maintainer_email = support@architect.io
description = The basic blog app built in the Flask tutorial.
long_description = file: README.md
long_description_content_type = text

[options]
packages = find:
include_package_data = true
install_requires = Flask

[coverage:run]
branch = True
source = flaskr
